# lstm_calculator

./: NLP_HW2_NCCU_112703016.ipynb  README.md  mathlstm.py  nlp_hw2_nccu_112703016.py  pyproject.toml  requirements.txt  test.ipynb
